ACE-347 Removed commons-codec dependency
git-svn-id: https://svn.apache.org/repos/asf/ace/trunk@1517477 13f79535-47bb-0310-9956-ffa450edef68